# suricata-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt  setup.cfg
jupyter/: Dockerfile
jupyter/Notebooks/: Config.ipynb  DynamicHunting.ipynb  HuntEvents.ipynb  HuntGraphMine.ipynb  HuntUniqueFields.ipynb  JupyterPlaybooksForScirius.ipynb  JupyterPlaybooksForSuricata.ipynb  Reporting.ipynb  RetroSearchDomains.ipynb  SuricataRulesetAnalysis.ipynb  SuricataRulesetExploration.ipynb  SuricataUnixSocketMode.ipynb  Suricon2022Talk.ipynb
jupyter/Notebooks/blogs/playbooks-scirius/: JupyterPlaybooksForScirius.ipynb
jupyter/Notebooks/blogs/playbooks-suricata/: JupyterPlaybooksForSuricata.ipynb
jupyter/Notebooks/events/suricon-2022/: Suricon2022Talk.ipynb
jupyter/Notebooks/events/suricon-2024/: sample-1.csv  sample-4.csv  sample-5.csv  smb-status-funky.json  suricon.ipynb
jupyter/Notebooks/examples/: Reporting.ipynb  RetroSearchDomains.ipynb
jupyter/Notebooks/hunting/: 001-attack-resp-long-payloads.ipynb  002-base64-payloads.ipynb  003-short-filenames.ipynb  004-ssh-client-server-outliers.ipynb  005-unique-novel-sigs-per-target.ipynb  006-extract-downloaded-scripts.ipynb  007-payload-scraper.ipynb  008-discovery.ipynb  009-smb-overview.ipynb  010-smb-exploration.ipynb  011-trivial-delivery.ipynb  012-uniq-hunting.ipynb
jupyter/Notebooks/hunting/static/: 001-attack-resp-long-payloads.ipynb  004-ssh-client-server-outliers.ipynb  005-unique-novel-sigs-per-target.ipynb  007-payload-scraper.ipynb  009-smb-overview.ipynb  013-hostname-info.ipynb  014-alerts-per-src.ipynb
jupyter/Notebooks/hunting/widgets/: Config.ipynb  DynamicHunting.ipynb
jupyter/Notebooks/rules/: SuricataRulesetAnalysis.ipynb  SuricataRulesetExploration.ipynb
jupyter/Notebooks/suricata/: SuricataUnixSocketMode.ipynb
jupyter/Notebooks/suricon-2024/: http-alert-sample.json  sample-2.csv  sample-3.csv
jupyter/Notebooks/training/: 001-eve-basics.ipynb  002-malware-detection-rules.ipynb  003-malware-deteciont-no-rules.ipynb  004-suricata-analytics.ipynb
jupyter/Notebooks/training/data/02/: eve.json
jupyter/Notebooks/training/data/03/: eve.json
jupyter/scripts/: clear_notebooks
python/surianalytics/: connectors.py  datamining.py  helpers.py  viz.py
python/surianalytics/widgets/: config.py  explorer.py  report.py  uniq.py
