[metadata]
name = suricata-analytics
version = 0.1.0
description = Suricata Analytics notebook helpers, such as data connectors and crunchers.
license = GNU General Public License v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Topic :: Security

author = Markus Kont
author_email = markus@stamus-networks.com
url = https://github.com/StamusNetworks/suricata-analytics

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir=
    =python
packages=find:
install_requires=
    jupyter == 1.0.0
    jupyterlab == 3.5.0
    numpy <=1.23.3
    pandas <=1.5.1
    networkx <=2.8.7
    requests <=2.28.1
    python-dotenv <=0.21.0
    ipywidgets == 8.0.2
    holoviews == 1.15.2
    hvplot == 0.8.2
    msticpy == 2.1.4

[options.packages.find]
where=python
