[metadata]
name = suricata-analytics
version = 0.1.0
description = Suricata Analytics notebook helpers, such as data connectors and crunchers.
license = GNU General Public License v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Topic :: Security

author = Markus Kont
author_email = markus@stamus-networks.com
url = https://github.com/StamusNetworks/suricata-analytics

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir=
    =python
packages=find:
install_requires=
    numpy == 1.24.2
    pandas == 2.0.2
    networkx == 3.1
    requests == 2.31.0
    python-dotenv == 1.0.0
    ipywidgets == 8.0.6
    holoviews == 1.16.0
    hvplot == 0.8.3
    matplotlib == 3.6.3
    webcolors == 1.13

[options.packages.find]
where=python
